--- a/README
+++ b/README
@@ -3,12 +3,15 @@ tango-icon-theme
 This is an icon theme that follows the Tango visual guidelines.
 
 Build requirements:
-  cygwin-1.5.24-2
-  cygport-0.3.7-1
-  gawk-3.1.5-4
-  ImageMagick-6.3.6.3-1
-  icon-naming-utils-0.8.6-1
-  make-3.81-1
+  cygwin-1.7.0-44
+  cygport-0.9.6-1
+  gawk-3.1.6-2
+  ImageMagick-6.4.0.6-1
+  icon-naming-utils-0.8.90-1
+  libMagick-devel-6.4.0.6-1
+  librsvg2-devel-2.26.0-1
+  make-3.81-2
+  rsvg-2.26.0-1
   sed-4.1.5-2
 
 Canonical homepage:
@@ -20,40 +23,32 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack tango-icon-theme-0.8.1-X-src.tar.bz2
+  unpack tango-icon-theme-0.8.90-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./tango-icon-theme-0.8.1-X.cygport all
+  cygport ./tango-icon-theme-0.8.90-X.cygport all
 
 This will create:
-  /usr/src/tango-icon-theme-0.8.1-X-src.tar.bz2
-  /usr/src/tango-icon-theme-0.8.1-X.tar.bz2
+  /usr/src/tango-icon-theme-0.8.90-X-src.tar.bz2
+  /usr/src/tango-icon-theme-0.8.90-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
-  /usr/share/doc/Cygwin/tango-icon-theme-0.8.1.README
-  /usr/share/doc/tango-icon-theme-0.8.1/AUTHORS
-  /usr/share/doc/tango-icon-theme-0.8.1/COPYING
-  /usr/share/doc/tango-icon-theme-0.8.1/ChangeLog
-  /usr/share/doc/tango-icon-theme-0.8.1/INSTALL
-  /usr/share/doc/tango-icon-theme-0.8.1/README
+  /usr/share/doc/tango-icon-theme/AUTHORS
+  /usr/share/doc/tango-icon-theme/COPYING
+  /usr/share/doc/tango-icon-theme/ChangeLog
+  /usr/share/doc/tango-icon-theme/README
   /usr/share/icons/Tango/*/*/*
 
 ------------------
 
 Port Notes:
 
------ version 0.8.1-1 -----
-Version bump.
-
------ version 0.8.0-1 -----
-Version bump.
-
------ version 0.7.1-1 -----
-Initial release for Cygwin.
+----- version 0.8.90-1 -----
+Initial release for Cygwin 1.7.
 
 
 
